Fix overlapping layout and responsive issues

--- a/sec4.css
+++ b/sec4.css
@@ -208,15 +208,18 @@
   border-radius: 12px;
   font-size: 2rem;
   font-weight: bold;
+  margin-bottom: 0px;
 }
 .swiper-slide:hover {
   background: #ddd;
   transform: scale(1.05);
   transition: transform 0.3s ease;
   color:lightblue;
+  margin-bottom:0px;
 
 }
 .sec-5 h1{
+    margin-top:20px;
     text-align: center;
     font-size:50px;
     font-weight: 600;
